clean up cheat sheet, try to get working in code blog

--- a/Code/BlackJack/BlackJack.html
+++ b/Code/BlackJack/BlackJack.html
@@ -2,11 +2,14 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../code-index-of-posts.css">
     <link rel="stylesheet" type="text/css" href="bj_stylesheet.css">
 
     <title>Mike Farr's Blackjack Game - DevBootCamp JS week 1</title>
     <script src="my_solution.js"></script>
 </head>
+<iframe id="index-of-posts" src="../code-index-of-posts.html">
+</iframe>
 <body>
 <div id="table_area">
     <div id="dealer_area">
