--- a/cheat-sheet.html
+++ b/cheat-sheet.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>IU Webmaster redirect</title>
-    <META http-equiv="refresh" content="0;URL=http://iMikie.github.io/site-master.html">
+    <META http-equiv="refresh" content="0;URL=http://iMikie.github.io/ruby_quick_ref/ruby_quick_ref.html">
   </head>
   <body bgcolor="#ffffff">
 
