--- a/Code/code-index-of-posts.html
+++ b/Code/code-index-of-posts.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../index-of-posts.css">
+    <link rel="stylesheet" type="text/css" href="../code_index-of-posts.css">
 </head>
 <main>
     <nav>
         <p>Posts</p>
+
         <p>March 2015</p>
-        <p><a href="Code/Ruby_Cheat_Sheet/ruby_cheat_sheet.html"> Ruby Cheat Sheet</a></p>
-        <p><a href="Code/BlackJack.html"> BlackJack Game</a></p>
+
+        <p><a href="../ruby_quick_ref/ruby_quick_ref.html" onclick="window.top.new_iframe('../ruby_quick_ref/ruby_quick_ref.html');">Ruby Quick Ref</a></p>
+
+        <p><a href="../BlackJack/BlackJack.html" onclick="window.top.new_iframe('../BlackJack/BlackJack.html');">BlackJack Game</a></p>
     </nav>
 
 </main>
